[package]
name = "wlx-capture"
version = "0.1.0"
edition = "2021"
authors = ["galister"]
description = "Screen capture library for Wayland and X11"
repository = "https://github.com/galister/wlx-capture"
keywords = ["desktop", "capture", "pipewire", "wayland", "x11"]
categories = ["computer-vision", "multimedia::images"]
documentation = "https://docs.rs/wlx-capture"
license = "GPL-3.0"

[features]
default = ["wlr", "pipewire", "xshm"]
egl = []
wlr = ["wayland"]
pipewire = ["wayland", "dep:ashpd", "dep:pipewire"]
wayland = ["dep:smithay-client-toolkit", "dep:wayland-client", "dep:wayland-protocols"]
xshm = ["dep:xcb", "dep:rxscreen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ashpd = { version = "0.6.2", optional = true }
drm-fourcc = "2.2.0"
idmap = "0.2.21"
libc = "0.2.147"
libspa-sys = "0.7.2"
log = "0.4.20"
once_cell = "1.18.0"
pipewire = { version = "0.7.2", features = ["v0_3_33"], optional = true }
rxscreen = { version = "0.1.7", features = ["shm", "xrandr", "mouse"], optional = true }
smithay-client-toolkit = { version = "0.17.0", optional = true }
wayland-client = { version = "0.30.2", optional = true }
wayland-protocols = { version = "0.30.1", features = ["wayland-client", "client", "staging", "unstable"], optional = true }
xcb = { version = "1.2.2", features = ["shm", "randr", "xinerama"], optional = true }
